--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,79 @@
 body{
 	background-color: white;
+	width: 100%;
+	height:100%;
+	margin: auto;
 }
 
 .main{
-	text-align: center;
+	
 }
+
+
+
+#lucy{
+	text-align: right;
+	width: 40%;
+	height:110px; 
+	float: left;
+	display: inline-block;
+	 }
+
+#bar{
+	height: 550px;
+	width: 8.5px;
+	background: black;
+	float:left;
+	position: relative;
+	top: 110px;
+	left: -27px;
+}
+
+#exercises{
+	text-align: left;
+	height: 100px;
+	width:200px;
+	display: inline-block; 
+	float: left;
+	position: relative;
+	top: 200px;
+}
+
+#projects{
+	text-align: right;
+	height: 100px;
+	width:200px;
+	display: inline-block; 
+	float: left;
+	position: relative;
+	left:-460px;
+	top: 300px;
+	
+
+}
+
+
 
 h1{
 	font-family: Avenir;
-	font-style: normal;
-	color: #d8cbeb;
-	font-size: 40pt;
+	font-variant: small-caps;
+	color: black;
+	font-size: 54pt;
+}
+
+h2{
+	font-family: Avenir;
+	font-variant: small-caps;
+	color: black;
+	font-size: 18pt;
+	line-height: 0px;
 
 }
 
 a{
 	color:black;
 	font-family: Avenir;
+	font-variant: small-caps;
 
 }
 
