--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
 #bar{
 	height: 550px;
 	width: 8.5px;
-	background: black;
+	background: #d99ce1;
 	float:left;
 	position: relative;
 	top: 110px;
@@ -57,7 +57,7 @@ body{
 h1{
 	font-family: Avenir;
 	font-variant: small-caps;
-	color: black;
+	color: #d99ce1;
 	font-size: 54pt;
 }
 
@@ -77,6 +77,6 @@ a{
 
 }
 
-a:visited{
-	color: #56595c;
+a:hover{
+	color: #d99ce1;
 }
