--- a/proj2/css/styles2.css
+++ b/proj2/css/styles2.css
@@ -1,31 +1,164 @@
 body{
 	background:#DE6100;
 	margin: auto;
+
 }
 
 #left{
-	margin-left: 6%;
-	width: 60%;
-	height: 90%;
+	background:;
+	margin-left: 9%;
+	width: 55%;
+	height: 100%;
 	float: left;
 
 }
 
 #right{
+	background:;
 	width: 30%;
-	height: 90%;
+	height: 100%;
 	margin: auto;
 	float: left;
 }
 
-#a{
+
+#ain{
+	background: ;
 	transform:scale(.5);
-	margin-left: 20px;
-	margin-top: 25px;
-	background: #DE6100;
+	margin-left: 0px;
 	width: 140px;
 	height: 200px;
 	float: left;
+	
+
+}
+
+
+#a1{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation:bounce .6s 3;
+	animation-delay:.5s;
+
+}
+
+
+
+
+#a2{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation:rotateOut 1.1s 3;
+	animation-delay:.5s;
+
+}
+
+#a3{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	
+
+}
+
+#a4{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation-name:bounce4;
+	animation-duration:.7s;
+	animation-iteration:infinite;
+
+}
+
+#a5{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation-name:bounce5;
+	animation-duration:.7s;
+	animation-iteration:infinite;
+
+}
+
+#a6{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation-name:bounce6;
+	animation-duration:.7s;
+	animation-iteration:infinite;
+
+}
+
+#a7{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation-name:bounce7;
+	animation-duration:.7s;
+	animation-iteration:infinite;
+
+}
+
+#a8{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation:bounce2 1.2s 3;
+	animation-delay:.5s;
+}
+
+#a9{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation-name:bounce9;
+	animation-duration:.7s;
+	animation-iteration:infinite;
+
+}
+
+#a10{
+	background: ;
+	margin-left: 25px;
+	margin-top: 0px;
+	width: 120px;
+	height: 170px;
+	float: left;
+	animation-name:bounce10;
+	animation-duration:.7s;
+	animation-iteration:infinite;
+
 }
 
 #al{
@@ -43,7 +176,9 @@ body{
 }
 
 
+
 .ascircle{
+	left: .5px;
 	margin: auto;
 	border-radius:.8in; 
 	width:1.27in;
@@ -57,8 +192,9 @@ body{
 }
 
 .ahalfline{
+	left: 1px;
 	top: -1.34in;
-	width: 6.8pt;
+	width: 6.7pt;
 	height: 1.38in;
 	background: black;
 	position: relative;
@@ -66,7 +202,7 @@ body{
 
 .ahalfline2{
 	top:-1.35in;
-	left: .44in;
+	left: .45in;
 	width: 6.8pt;
 	height: 1.38in;
 	background: black;
@@ -201,7 +337,7 @@ body{
 .chalfline{
 	top: -4in;
 	left: 88px;
-	width: 6.8pt;
+	width: 6.7pt;
 	height: 1.37in;
 	background: black;
 	position: relative;
@@ -451,6 +587,7 @@ body{
 }
 
 .ncircle{
+	left: .5px;
 	border-radius:3in 3in 0in 0in; 
 	width:1.27in;
 	height:.635in;
@@ -550,7 +687,7 @@ body{
 }
 
 .qrectangle{
-	left: 61px;
+	left: 62px;
 	background: #DE6100;
 	top: -705px;
 	z-index: 1;
@@ -576,7 +713,7 @@ body{
 .rhalfline{
 	top:-1.35in;
 	left: 42px;
-	width: 6.8pt;
+	width: 6.7pt;
 	height: 1.38in;
 	background: black;
 	position: relative;
