--- a/proj2/css/styles2.css
+++ b/proj2/css/styles2.css
@@ -57,10 +57,43 @@ body{
 	width: 120px;
 	height: 170px;
 	float: left;
-	animation:rotateOut 1.1s 3;
+	animation:rotate1 1.5s 3;
 	animation-delay:.5s;
-
 }
+
+
+@-webkit-keyframes rotate1 {
+  from {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    opacity: 1;
+  }
+
+  to {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate3d(0, 1, 0, 1080deg);
+    transform: rotate3d(0, 1, 0, 1080deg);
+    opacity: 1;
+  }
+}
+
+@keyframes rotate1 {
+  from {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    opacity: 1;
+  }
+
+  to {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate3d(0, 1, 0, 1080deg);
+    transform: rotate3d(0, 1, 0, 1080deg);
+    opacity: 1;
+  }
+}
+
 
 #a3{
 	background: ;
